# quad-sdk

./: .gitignore  .gitmodules  .travis.yml  ContactPlugin_8hh_source.html  Doxyfile  LICENSE  README.md  annotated.html  body__force__estimator_8h_source.html  body__force__estimator__dynamics_8h_source.html  class1_8h_source.html  classBodyForceEstimator-members.html  classBodyForceEstimator.html  classClass1-members.html  classClass1.html  classCompFilterEstimator-members.html  classCompFilterEstimator.html  classCompFilterEstimator__coll__graph.map  classCompFilterEstimator__coll__graph.md5  classCompFilterEstimator__inherit__graph.map  classCompFilterEstimator__inherit__graph.md5  classContactDetection-members.html  classContactDetection.html  classContactStatePublisher-members.html  classContactStatePublisher.html  classController-members.html  classController.html  classEKFEstimator-members.html  classEKFEstimator.html  classEKFEstimator__coll__graph.map  classEKFEstimator__coll__graph.md5  classEKFEstimator__inherit__graph.map  classEKFEstimator__inherit__graph.md5  classEstimator-members.html  classEstimator.html  classFastGlobalMotionPlanner-members.html  classFastGlobalMotionPlanner.html  classFastGlobalMotionPlanner__coll__graph.map  classFastGlobalMotionPlanner__coll__graph.md5  classFastInterpolator-members.html  (+882 more)
clark_trot_controller/: CMakeLists.txt  package.xml
clark_trot_controller/src/: clark_trot_controller.cpp  clark_trot_controller_node.cpp
clark_trot_controller/test/: test_clark_trot_controller.cpp
contact_detection/: CMakeLists.txt  contact_detection.yaml  package.xml
contact_detection/src/: contact_detection.cpp  contact_detection_node.cpp
contact_detection/test/: test_contact_detection.cpp
controller/: CMakeLists.txt  package.xml
controller/src/: controller.cpp  controller_node.cpp
controller/test/: test_controller.cpp
ekf_estimator/: CMakeLists.txt  ekf_estimator.yaml  package.xml
ekf_estimator/src/: ekf_estimator.cpp  ekf_estimator_node.cpp
ekf_estimator/test/: test_ekf_estimator.cpp
estimator/: CMakeLists.txt  package.xml
estimator/src/: estimator.cpp  estimator_node.cpp
estimator/test/: test_estimator.cpp
global_body_planner/: CMakeLists.txt  README.md  global_body_planner.yaml  package.xml  setup_deps.sh
global_body_planner/config/: diagnostics.yaml  simple_terrain.yaml
global_body_planner/launch/: diagnostics.launch  example.launch  example_with_terrain.launch  slope.launch
global_body_planner/rviz/: example.rviz  example_with_terrain.rviz
global_body_planner/src/: action.cpp  fast_global_motion_planner.cpp  functions.cpp  gbpl.cpp  global_body_plan.cpp  global_body_planner.cpp  global_body_planner_node.cpp  graph_class.cpp  leap_action.cpp  planner.cpp  planner_class.cpp  planning_utils.cpp  rrt.cpp  rrt_connect.cpp  rrt_star_connect.cpp  simple_terrain_node.cpp  walk_action.cpp
global_body_planner/test/: test_action_commutation.cpp  test_global_body_planner.cpp  test_kinematics.cpp  test_performance.cpp  test_rotate_grf.cpp  test_states_actions.cpp
inverse_dynamics/: CMakeLists.txt  inverse_dynamics.yaml  package.xml
inverse_dynamics/src/: inverse_dynamics.cpp  inverse_dynamics_node.cpp  leg_overrider.cpp  leg_overrider_node.cpp
inverse_dynamics/test/: test_inverse_dynamics.cpp
leg_controller/: CMakeLists.txt  leg_controller.yaml  package.xml
leg_controller/src/: grf_pid_controller.cpp  inverse_dynamics.cpp  joint_controller.cpp  leg_controller.cpp  leg_controller_interface.cpp  leg_controller_node.cpp  leg_controller_template.cpp  leg_overrider.cpp  leg_overrider_node.cpp  mblink_converter.cpp  underbrush_inverse_dynamics.cpp
leg_controller/test/: test_inverse_dynamics.cpp  test_leg_controller.cpp
local_planner/: CMakeLists.txt  README.md  local_planner.yaml  package.xml  setup_deps.sh
local_planner/src/: .local_planner.cpp.swp  local_body_planner.cpp  local_footstep_planner.cpp  local_planner.cpp  local_planner_node.cpp  logger.cpp  mpc_controller.cpp  mpc_controller_node.cpp  quadruped_mpc.cpp  quadruped_mpc_fixed.cpp
local_planner/test/: test_local_footstep_planner.cpp  test_local_planner.cpp  test_mpc_controller.cpp  test_quadruped_mpc.cpp
local_planner_walk/: CMakeLists.txt  package.xml
local_planner_walk/src/: local_planner_walk.cpp  local_planner_walk_node.cpp
local_planner_walk/test/: test_local_planner.cpp
mblink_converter/: CMakeLists.txt  mblink_converter.yaml  package.xml
mblink_converter/src/: mblink_converter.cpp  mblink_converter_node.cpp
mblink_converter/test/: test_mblink_converter.cpp
mpc_controller/: CMakeLists.txt  mpc_controller.yaml  package.xml
mpc_controller/src/: mpc_controller.cpp  mpc_controller_node.cpp  quadruped_mpc.cpp
mpc_controller/test/: test_mpc_controller.cpp  test_quadruped_mpc.cpp
open_loop_controller/: CMakeLists.txt  open_loop_controller.yaml  package.xml
open_loop_controller/src/: open_loop_controller.cpp  open_loop_controller_node.cpp  silly_walk_template.cpp  silly_walk_template_node.cpp
open_loop_controller/test/: test_open_loop_controller.cpp
package_template/: CMakeLists.txt  package.xml
package_template/src/: package_template.cpp  package_template_node.cpp
package_template/test/: test_package_template.cpp
quad_imu/: CMakeLists.txt  LICENSE  README.md  package.xml
quad_imu/launch/: quad_imu.launch
quad_logger/: CMakeLists.txt  package.xml
quad_pybullet/: CMakeLists.txt  package.xml  plane.urdf  sample_contactmsg.txt  setup.py
quad_utils/: CMakeLists.txt  FindRBDL.cmake  README.md  package.xml  setup_deps.sh
realsense_grid_map/: CMakeLists.txt  package.xml
robot_driver/: CMakeLists.txt  README.md  frames.gv  package.xml  robot_driver.yaml  robot_driver_for_ylo2.yaml  setup_deps.sh
spirit_estimator_controller/: CMakeLists.txt  package.xml  setup_deps.sh
spirit_logger/: .gitignore  CMakeLists.txt  package.xml  setup_deps.sh
spirit_msgs/: CMakeLists.txt  package.xml
spirit_simulator/: CMakeLists.txt  README.md  package.xml  setup_deps.sh
spirit_utils/: CMakeLists.txt  package.xml  setup_deps.sh
(+2649 files in other folders)
